Bug 12282 - Feedback: Category name should align bottom with filter/sort dropdowns

--- a/skins/retail/css/categories.css
+++ b/skins/retail/css/categories.css
@@ -247,14 +247,16 @@
     filter: alpha(opacity=0);
 }
 .category_description {
+    position: absolute;
+    top: -37px;
+    left: 0;
+    right: 470px;
     height:25px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
     font-size: 13px;
     font-style: italic;
-    margin-bottom: 6px;
-    margin-top: 1px;
 }
 .category_description h2 {
     display: inline;
